--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/react": "^2.0.0",
+    "@chakra-ui/react": "1.4.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "apexcharts": "^3.35.2",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^17",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^17",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
