--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17",
+    "react-hook-form": "^7.31.3",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
