--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "1.4.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.10",
     "apexcharts": "^3.35.2",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
@@ -20,7 +21,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17",
     "react-hook-form": "^7.31.3",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.33",
