--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
