--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
